# public_bidding

./: setup.cfg
data/processed/: dados_no_services.csv  objetos_agrup.csv  objetos_agrup2.csv  objetos_agrup2.xls  output.csv  output.xls  top_20.csv
notebooks/: 01_abordagem_estatistica.ipynb  02_abordagem_estatistica_polido.ipynb  03_estruturação_p_modelos.ipynb  04_baseline.ipynb  05_.ipynb  abordagem_estatistica.ipynb  remove_itens.py
src/: remove_itens.py
