[metadata]
name = TCC EDNAEL
version = 1.0.1
author = Ednael Vieira
description = Tcc pós
long_description = Projeto para sistema de detecção de anomalias em licitações públicas do governo federal
url = github:
keywords = one, two
license = BSD 3-Clause License
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7, <4
install_requires =
    pandas
    numpy
    plotly
#package_dir =
#    =src
packages = find:

[options.entry_points]
runners =
    sample=sample:main
console_scripts =
    executable-name = tcc.module:function

[options.extras_require]
test =
    pytest
    coverage

[options.package_data]
sample =
    example_data.csv

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    my_package.tests*
    notebooks*